# lightforth-copilot

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  session_store.rs
src-tauri/src/audio/: capture.rs  mod.rs
src-tauri/src/commands/: ai.rs  mod.rs  session.rs
src-tauri/src/system/: detection.rs  macos.rs  mod.rs  os_helpers.rs  system_audio.rs
src/components/: SessionControl.tsx  TranscriptItem.tsx
src/context/: AppContext.tsx
src/hooks/: session.ts
src/layout/: TitleBar.tsx
src/layout/dashboard/: Sidebar.tsx
src/lib/: storage.ts
src/routes/: Overview.tsx  SeasonSummary.tsx  Sheets.tsx
src/screens/: Dashboard.tsx  MeetingWidget.tsx  Widget.tsx
src/services/: apiClient.ts
src/store/: state.ts
src/utils/: formatters.ts
