[package]
name = "lightforth-copilot"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lightforth_copilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.17.3"
anyhow = "1.0.102"
lazy_static = "1.5.0"
tauri-plugin-store = "2"
reqwest = { version = "0.13.2", features = ["json", "multipart"] }
dotenvy = "0.15.7"
tokio = "1.50.0"
byteorder = "1.5.0"
active-win-pos-rs = "0.10.0"
sysinfo = "0.38.4"
kalosm = { version = "0.4.0", features = ["language"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"
windows = { version = "0.58", features = [
  "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints", # <--- This is often the missing piece
    "Win32_System_Com",
    "Win32_System_Variant",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"

